tests/invalid/cycle_b.h
#ifndef CYCLE_B_H
#define CYCLE_B_H
#include "cycle_a.h"
#endif
